[package]
name = "orbit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
orbit-core = { path = "../orbit-core" }
orbit-fmt = { path = "../orbit-fmt" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
