[package]
name = "orbit-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
indexmap = { workspace = true }
orbit-core = { path = "../orbit-core" }
orbit-fmt = { path = "../orbit-fmt" }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
